@@ -1,6 +1,7 @@
 duihome (0.21.16~1) unstable; urgency=low
 
   * New version [UNRELEASED]
+  * Fixes: NB#178843 - switcher goes to wrong page when minimizing the 5th application for the first time
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 15 Jul 2010 20:05:45 +0300
 
